header auto overflow issue fix

--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -8,6 +8,5 @@
 .stats-item {
   display: grid;
   place-items: center;
-  grid-template-rows: repeat(3, auto);
-  grid-template-columns: auto;
+  grid-template-rows: 70% 15% 15%;
 }
